--- a/src/main/resources/static/apps-hosts.html
+++ b/src/main/resources/static/apps-hosts.html
@@ -108,8 +108,8 @@
                     "stacked": true,
                     "links": [
                         {
-                            "label": "总览",
-                            "to": "/index.html"
+                            "label": "总览", "icon": "fa-solid fa-house",
+                            "to": "/"
                         },
                         {
                             "label": "基础信息管理",
