使用 trackExpression 解决图表有时未获取到数据

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,6 +56,7 @@
                                 "className": "Panel--primary",
                                 "body": {
                                     "type": "chart",
+                                    "trackExpression": "${items[0]}",
                                     "config": {
                                         series: [
                                             {
@@ -146,6 +147,7 @@
                                 "body":
                                     {
                                         "type": "chart",
+                                        "trackExpression": "${items[0]}",
                                         "config": {
                                             title: {
                                                 text: '各个漏洞等级的制品数量占比',
@@ -193,6 +195,7 @@
                                 "body":
                                     {
                                         "type": "chart",
+                                        "trackExpression": "${items[0]}",
                                         "config": {
                                             title: {
                                                 text: '各个开源协议的制品数量占比',
