--- a/src/main/resources/static/tags.html
+++ b/src/main/resources/static/tags.html
@@ -62,37 +62,39 @@
                             "type": "operation",
                             "label": "操作",
                             "buttons": [
-                                {
-                                    "label": "编辑",
-                                    "type": "button",
-                                    "actionType": "dialog",
-                                    "level": "link",
-                                    "dialog": {
-                                        "title": "编辑",
-                                        "body": {
-                                            "type": "form",
-                                            "api": "put:/api/tags",
-                                            "body": [
-                                                {
-                                                    "label": "id",
-                                                    "name": "id",
-                                                    "type": "static"
-                                                },
-                                                {
-                                                    "label": "标签名称",
-                                                    "name": "name",
-                                                    "type": "input-text"
-                                                }
-                                            ]
-                                        }
-                                    }
-                                },
+                                // {
+                                //     "label": "编辑",
+                                //     "type": "button",
+                                //     "actionType": "dialog",
+                                //     "level": "link",
+                                //     "dialog": {
+                                //         "title": "编辑",
+                                //         "body": {
+                                //             "type": "form",
+                                //             "api": "put:/api/tags",
+                                //             "body": [
+                                //                 {
+                                //                     "label": "id",
+                                //                     "name": "id",
+                                //                     "type": "static"
+                                //                 },
+                                //                 {
+                                //                     "label": "标签名称",
+                                //                     "name": "name",
+                                //                     "type": "input-text"
+                                //                 }
+                                //             ]
+                                //         }
+                                //     }
+                                // },
                                 {
                                     "label": "查看",
                                     "type": "button",
                                     "actionType": "dialog",
                                     "level": "link",
                                     "dialog": {
+                                        "closeOnEsc": true,
+                                        "closeOnOutside": true,
                                         "title": "查看详情",
                                         "body": {
                                             "type": "form",
@@ -111,18 +113,18 @@
                                         }
                                     }
                                 },
-                                {
-                                    "type": "button",
-                                    "label": "删除",
-                                    "actionType": "ajax",
-                                    "level": "link",
-                                    "className": "text-danger",
-                                    "confirmText": "确定要删除？",
-                                    "api": {
-                                        "method": "delete",
-                                        "url": "/api/tags/${id}"
-                                    }
-                                }
+                                // {
+                                //     "type": "button",
+                                //     "label": "删除",
+                                //     "actionType": "ajax",
+                                //     "level": "link",
+                                //     "className": "text-danger",
+                                //     "confirmText": "确定要删除？",
+                                //     "api": {
+                                //         "method": "delete",
+                                //         "url": "/api/tags/${id}"
+                                //     }
+                                // }
                             ]
                         }
                     ],
@@ -136,33 +138,33 @@
                         "delete"
                     ],
                     "filterColumnCount": 3,
-                    "headerToolbar": [
-                        {
-                            "label": "新增",
-                            "type": "button",
-                            "actionType": "dialog",
-                            "level": "primary",
-                            "dialog": {
-                                "title": "新增",
-                                "body": {
-                                    "type": "form",
-                                    "api": {
-                                        "method": "post",
-                                        "url": "/api/tags",
-                                        "dataType": "json"
-                                    },
-                                    "body": [
-                                        {
-                                            "type": "input-text",
-                                            "name": "name",
-                                            "label": "标签名称"
-                                        }
-                                    ]
-                                }
-                            }
-                        },
-                        "bulkActions"
-                    ],
+                    // "headerToolbar": [
+                    //     {
+                    //         "label": "新增",
+                    //         "type": "button",
+                    //         "actionType": "dialog",
+                    //         "level": "primary",
+                    //         "dialog": {
+                    //             "title": "新增",
+                    //             "body": {
+                    //                 "type": "form",
+                    //                 "api": {
+                    //                     "method": "post",
+                    //                     "url": "/api/tags",
+                    //                     "dataType": "json"
+                    //                 },
+                    //                 "body": [
+                    //                     {
+                    //                         "type": "input-text",
+                    //                         "name": "name",
+                    //                         "label": "标签名称"
+                    //                     }
+                    //                 ]
+                    //             }
+                    //         }
+                    //     },
+                    //     "bulkActions"
+                    // ],
                     "messages": {},
                     "filter": {
                         "title": "查询条件",
